# DAPROJECT2

./: CMakeLists.txt  Convert.cpp  Convert.h  Data.h  Doxyfile  Graph.h  LiveRange.h  Parser.cpp  Parser.h  Point.h  RegisterPool.h  UFDS.cpp  Web.h  main.cpp  menu.cpp  menu.h
Data/: my_ranges.txt  my_ranges2.txt  my_ranges3.txt  my_ranges4.txt  regs_spill.txt
Output/: allocation_1.txt  allocation_2.txt  allocation_3.txt  allocation_4.txt  allocation_5.txt
docs/html/: _convert_8cpp.html  _convert_8h.html  _convert_8h_source.html  _data_8h_source.html  _graph_8h.html  _graph_8h.js  _graph_8h_source.html  _live_range_8h_source.html  _mutable_priority_queue_8h_source.html  _parser_8cpp.html  _parser_8h.html  _parser_8h_source.html  _point_8h_source.html  _register_pool_8h_source.html  _u_f_d_s_8h_source.html  _web_8h_source.html  annotated.html  annotated_dup.js  class_convert-members.html  class_convert.html  class_edge-members.html  class_edge.html  class_graph-members.html  class_graph.html  class_graph.js  class_mutable_priority_queue-members.html  class_mutable_priority_queue.html  class_parser-members.html  class_parser.html  class_parser.js  class_register_pool-members.html  class_register_pool.html  class_register_pool.js  class_u_f_d_s-members.html  class_u_f_d_s.html  class_vertex-members.html  class_vertex.html  classes.html  dir_1af6a6972f84200ebe81e86dbbe10fa8.html  dir_2fdff7b997f4306666f08932665a29fd.html  (+33 more)
docs/latex/: _convert_8cpp.tex  _convert_8h.tex  _convert_8h_source.tex  _data_8h_source.tex  _graph_8h.tex  _graph_8h_source.tex  _parser_8cpp.tex  (+27 more)
(+40 files in other folders)
